[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mini-exchange"
version = "0.1.0"
description = "A mini-exchange built from scratch: matching engine, order book, bots, tick feed, settlement (build-in-public)"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Added in later phases (don't install yet):
#   Phase 3 (API):  fastapi, "uvicorn[standard]", websockets
#   Optional:       sortedcontainers   # if you want O(log n) best-price access

[tool.hatch.build.targets.wheel]
packages = ["src/exchange"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v"
